@@ -2,7 +2,7 @@
 #                                                                      #
 #               This software is part of the ast package               #
 #          Copyright (c) 1982-2011 AT&T Intellectual Property          #
-#          Copyright (c) 2020-2022 Contributors to ksh 93u+m           #
+#          Copyright (c) 2020-2023 Contributors to ksh 93u+m           #
 #                      and is licensed under the                       #
 #                 Eclipse Public License, Version 2.0                  #
 #                                                                      #
@@ -169,6 +169,19 @@ case \\x in \\"${p}"x)		err_exit "match: ormaaj case test 13";; esac
 case \\x in \\${p}x)		warning "match: ormaaj case test 14 [unspecified]";; esac
 case \\x in \\"\\"x)		err_exit "match: ormaaj case test 15";; esac
 case \\x in \\\\x)		err_exit "match: ormaaj case test 16";; esac
+
+# ======
+# negator quoting
+case \\ in [!X]) ;; *) err_exit "negator ! not working";; esac
+case \\ in [^X]) ;; *) err_exit "negator ^ not working";; esac
+case \\ in [\!X]) err_exit "\\ mismatches \\!";; esac
+case \\ in [\^X]) err_exit "\\ mismatches \\^";; esac
+case \\ in ['!'X]) err_exit "\\ mismatches '!'";; esac
+case \\ in ['^'X]) err_exit "\\ mismatches '^'";; esac
+case \\ in ["!"X]) err_exit "\\ mismatches \"!\"";; esac
+case \\ in ["^"X]) err_exit "\\ mismatches \"^\"";; esac
+case \\ in [$'!'X]) err_exit "\\ mismatches \$'!'";; esac
+case \\ in [$'^'X]) err_exit "\\ mismatches \$'^'";; esac
 
 # ======
 exit $((Errors<125?Errors:125))
