@@ -132,8 +132,8 @@ State_t		state =
 		'!',		T_BAD,		T_BAD,
 		'!',		T_BANG,		T_BAD,
 		T_BANG, 	'!',		T_BAD,
-		'!',		'!',		T_BAD,
-		T_BANG,		'!',		T_BAD,
+		'!',		'!',		'!',
+		T_BANG,		'!',		'!',
 	'@',
 		'@',		T_BAD,		T_BAD,
 		'@',		T_BAD,		T_BAD,
